--- a/src/simix/simcalls.in
+++ b/src/simix/simcalls.in
@@ -90,9 +90,9 @@ sg_size_t   file_write(smx_file_t fd, sg_size_t size, sg_host_t host) [[block]];
 smx_file_t  file_open(const char* mount, const char* path, sg_storage_t st) [[block]];
 int         file_close(smx_file_t fd, sg_host_t host) [[block]];
 int         file_unlink(smx_file_t fd, sg_host_t host) [[nohandler]];
-sg_size_t   file_get_size(smx_file_t fd);
-sg_size_t   file_tell(smx_file_t fd);
-int         file_seek(smx_file_t fd, sg_offset_t offset, int origin);
+sg_size_t   file_get_size(smx_file_t fd) [[nohandler]];
+sg_size_t   file_tell(smx_file_t fd) [[nohandler]];
+int         file_seek(smx_file_t fd, sg_offset_t offset, int origin) [[nohandler]];
 int         file_move(smx_file_t fd, const char* fullpath);
 
 int        mc_random(int min, int max);
