get rid of smx_file_t

--- a/src/simix/simcalls.in
+++ b/src/simix/simcalls.in
@@ -85,15 +85,15 @@ void      sem_acquire(smx_sem_t sem) [[block]];
 void      sem_acquire_timeout(smx_sem_t sem, double timeout) [[block]];
 int       sem_get_capacity(smx_sem_t sem);
 
-sg_size_t   file_read(smx_file_t fd, sg_size_t size, sg_host_t host) [[block]];
-sg_size_t   file_write(smx_file_t fd, sg_size_t size, sg_host_t host) [[block]];
-smx_file_t  file_open(const char* mount, const char* path, sg_storage_t st) [[block]];
-int         file_close(smx_file_t fd, sg_host_t host) [[block]];
-int         file_unlink(smx_file_t fd, sg_host_t host) [[nohandler]];
-sg_size_t   file_get_size(smx_file_t fd) [[nohandler]];
-sg_size_t   file_tell(smx_file_t fd) [[nohandler]];
-int         file_seek(smx_file_t fd, sg_offset_t offset, int origin) [[nohandler]];
-int         file_move(smx_file_t fd, const char* fullpath);
+sg_size_t   file_read(surf_file_t fd, sg_size_t size, sg_host_t host) [[block]];
+sg_size_t   file_write(surf_file_t fd, sg_size_t size, sg_host_t host) [[block]];
+surf_file_t  file_open(const char* mount, const char* path, sg_storage_t st) [[block]];
+int         file_close(surf_file_t fd, sg_host_t host) [[block]];
+int         file_unlink(surf_file_t fd, sg_host_t host) [[nohandler]];
+sg_size_t   file_get_size(surf_file_t fd) [[nohandler]];
+sg_size_t   file_tell(surf_file_t fd) [[nohandler]];
+int         file_seek(surf_file_t fd, sg_offset_t offset, int origin) [[nohandler]];
+int         file_move(surf_file_t fd, const char* fullpath);
 
 int        mc_random(int min, int max);
 void       set_category(boost::intrusive_ptr<simgrid::kernel::activity::ActivityImpl> synchro, const char* category) [[nohandler]];
