--- a/src/simix/simcalls.in
+++ b/src/simix/simcalls.in
@@ -81,8 +81,8 @@ void      sem_acquire(smx_sem_t sem) [[block]];
 void      sem_acquire_timeout(smx_sem_t sem, double timeout) [[block]];
 int       sem_get_capacity(smx_sem_t sem);
 
-sg_size_t   file_read(surf_file_t fd, sg_size_t size, sg_host_t host) [[block]];
-sg_size_t   file_write(surf_file_t fd, sg_size_t size, sg_host_t host) [[block]];
+sg_size_t   file_read(surf_file_t fd, sg_size_t size) [[block]];
+sg_size_t   file_write(surf_file_t fd, sg_size_t size) [[block]];
 
 int        mc_random(int min, int max);
 void       set_category(boost::intrusive_ptr<simgrid::kernel::activity::ActivityImpl> synchro, const char* category) [[nohandler]];
