Big move of all SMPI files in subfolders because it was a mess.
bindings : all C/F77 bindings + PMPI_* entry functions, which will be split up into several files next
mpi : all MPI structures (Request, Op, Info, Datatype, ...) implementation.
colls : untouched, collective comms folder
internals : all SMPI specifics (sharing, dvfs, instr, privatization, processes...)
include : all *.hpp and .h files (should it be moved ? it's added by default in the include path now)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -167,6 +167,10 @@ set(INCLUDES
   ${CMAKE_HOME_DIRECTORY}/src/include
   )
 
+if(enable_smpi)
+  set (INCLUDES ${INCLUDES} ${CMAKE_HOME_DIRECTORY}/src/smpi/include)
+endif()
+
 if(NOT CMAKE_CROSSCOMPILING AND EXISTS /usr/include/)
   set(INCLUDES ${INCLUDES} /usr/include/)
 endif()
