examples/smpi/replay_multiple: put generated file in build directory.

--- a/examples/smpi/replay_multiple/CMakeLists.txt
+++ b/examples/smpi/replay_multiple/CMakeLists.txt
@@ -3,7 +3,7 @@ if(enable_smpi)
 
   add_executable       (replay_multiple replay_multiple.c)
   target_link_libraries(replay_multiple simgrid)
-  ADD_TESH(smpi-replay-multiple --setenv srcdir=${CMAKE_HOME_DIRECTORY}/examples/smpi/replay_multiple --cd ${CMAKE_BINARY_DIR}/examples/smpi/replay_multiple ${CMAKE_HOME_DIRECTORY}/examples/smpi/replay_multiple/replay_multiple.tesh)
+  ADD_TESH(smpi-replay-multiple --setenv srcdir=${CMAKE_CURRENT_SOURCE_DIR} --setenv bindir=${CMAKE_CURRENT_BINARY_DIR} --cd ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/replay_multiple.tesh)
 endif()
 
 set(txt_files     ${txt_files}     ${CMAKE_CURRENT_SOURCE_DIR}/generate_multiple_deployment.sh
