--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -204,6 +204,8 @@ IF(CMAKE_SYSTEM_PROCESSOR MATCHES ".86|AMD64|amd64")
   ENDIF()
   if (WIN32)
     message(STATUS "Disable fast raw contexts on Windows.")
+  elseif(enable_address_sanitizer)
+    message("Disable fast raw contexts with ASan")
   else()
     set(HAVE_RAW_CONTEXTS 1)
   endif()
@@ -579,6 +581,8 @@ if(NOT HAVE_UCONTEXT_H)
 elseif(APPLE)
   message("-- No ucontext factory: Apple don't want us to use them.")
   set(HAVE_UCONTEXT_H 0)
+elseif(enable_address_sanitizer)
+  message("-- No ucontext factory: ASan does not support it (see http://code.google.com/p/address-sanitizer/issues/detail?id=189)")
 else()
   try_compile(compile_makecontext ${CMAKE_BINARY_DIR} ${CMAKE_HOME_DIRECTORY}/tools/cmake/test_prog/prog_makecontext.c
     OUTPUT_VARIABLE compile_makecontext_output)
