try to fix sonar by specifying where the java binaries are

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -98,6 +98,7 @@ sonar.sourceEncoding=UTF-8
 
 # Version of the used prog languages
 sonar.java.source=7
+sonar.java.binaries=CMakeFiles/simgrid-java_jar.dir,examples/java
 sonar.c.std=gnu11
 sonar.cpp.std=gnu++11
 
