sonar: don't complain about Java not having a proper logging mechanism

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,12 +13,17 @@ sonar.sources=src,examples,include,teshsuite
 
 
 # Disable some rules on some files
-sonar.issue.ignore.multicriteria=j1,jni1,jni2,c1,c2a,c2b,c3,c4a,c4b,c5a,c5b,f1
+sonar.issue.ignore.multicriteria=j1,j2,jni1,jni2,c1,c2a,c2b,c3,c4a,c4b,c5a,c5b,f1
 
 # The Object.finalize() method should not be overriden
 # But we need to clean the native memory with JNI
 sonar.issue.ignore.multicriteria.j1.ruleKey=squid:ObjectFinalizeOverridenCheck
 sonar.issue.ignore.multicriteria.j1.resourceKey=**/*.java
+
+# Throwable.printStackTrace(...) should not be called
+# But we don't have no better mechanism, and our Java apps are not rocket science
+sonar.issue.ignore.multicriteria.j2.ruleKey=squid:S1148
+sonar.issue.ignore.multicriteria.j2.resourceKey=**/*.java
 
 # "reinterpret_cast" should not be used
 # But this is exactly intended to store a pointer into a long -- what we do here
