--- a/.gitignore
+++ b/.gitignore
@@ -102,6 +102,7 @@ doc/simgrid.tag
 doc/doxygen/logcategories.doc
 doc/simgrid_modules.map
 doc/javadoc
+doc/example_lists/
 ### Specific of project 
 .settings/
 .csettings/
